// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contentCard > renders correctly with all directions > renders correctly direction column 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__u4r1ts4"
      target="_blank"
    >
      <div
        class="styles__u4r1tsf uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="styles_noHref__u4r1tsa styles__u4r1ts8 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction column and image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__u4r1ts4"
      target="_blank"
    >
      <div
        class="styles__u4r1tsf uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <img
          alt=""
          class="styles_column__u4r1tsd styles__u4r1tsc"
          height="120"
          src="/src/components/ContentCard/assets/illustration.png"
        />
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="styles_noHref__u4r1tsa styles__u4r1ts8 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction column and loading 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__u4r1ts4"
      target="_blank"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="styles_column__u4r1tsh styles__u4r1tsg uv_c2hb451"
          style="--u4r1ts1: 120px; --u4r1ts2: 100%;"
        >
          <div
            class="uv_fr4c0tk"
          />
          <div
            class="uv_c2hb452"
          />
        </div>
        <div
          class="styles__u4r1tsj uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__u4r1ts4"
      target="_blank"
    >
      <div
        class="styles__u4r1tsf uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="styles_noHref__u4r1tsa styles__u4r1ts8 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row and image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__u4r1ts4"
      target="_blank"
    >
      <div
        class="styles__u4r1tsf uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
      >
        <img
          alt=""
          class="styles_row__u4r1tse styles__u4r1tsc"
          src="/src/components/ContentCard/assets/illustration.png"
          width="220"
        />
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="styles_noHref__u4r1tsa styles__u4r1ts8 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with all directions > renders correctly direction row and loading 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__u4r1ts4"
      target="_blank"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="styles_row__u4r1tsi styles__u4r1tsg uv_c2hb451"
          style="--u4r1ts1: unset; --u4r1ts2: 220px;"
        >
          <div
            class="uv_fr4c0tk"
          />
          <div
            class="uv_c2hb452"
          />
        </div>
        <div
          class="styles__u4r1tsj uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="uv_c2hb451"
          >
            <div
              class="uv_fr4c0td"
              style="--uv_fr4c0t1: 7.5rem;"
            />
            <div
              class="uv_c2hb452"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__u4r1ts4"
      target="_blank"
    >
      <div
        class="styles__u4r1tsf uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="styles_noHref__u4r1tsa styles__u4r1ts8 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    test
                  </h3>
                </div>
              </div>
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
              >
                This is the children of the component
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__u4r1ts4"
      disabled=""
      target="_blank"
    >
      <div
        class="styles__u4r1tsf uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="styles_noHref__u4r1tsa styles__u4r1ts8 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow33"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with empty string title 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__u4r1ts4"
      target="_blank"
    >
      <div
        class="styles__u4r1tsf uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="styles_noHref__u4r1tsa styles__u4r1ts8 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__u4r1ts4 styles__u4r1ts3"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="styles__u4r1tsf uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="styles_column__u4r1ts9 styles__u4r1ts8 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="styles_column__u4r1ts6 uv_toi52u0 uv_toi52u11 uv_toi52u2d uv_toi52u31 uv_toi52u61"
            style="--uv_4k0ekn3: 1;"
          >
            <div
              class="styles__u4r1ts5"
            >
              <svg
                class="styles__dkdfcq0 styles_disabled_false__dkdfcq1 styles_prominence_default__dkdfcq3 styles_sentiment_neutral__dkdfcq9 styles_size_small__dkdfcqg styles_undefined_compound_34__dkdfcq1i"
                viewBox="0 0 16 16"
              >
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href and direction row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__u4r1ts4 styles__u4r1ts3"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="styles__u4r1tsf uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="styles_row__u4r1tsb styles__u4r1ts8 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="styles_row__u4r1ts7 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u6p"
            style="--uv_4k0ekn3: 1;"
          >
            <div
              class="styles__u4r1ts5"
            >
              <svg
                class="styles__dkdfcq0 styles_disabled_false__dkdfcq1 styles_prominence_default__dkdfcq3 styles_sentiment_neutral__dkdfcq9 styles_size_small__dkdfcqg styles_undefined_compound_34__dkdfcq1i"
                viewBox="0 0 16 16"
              >
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with href and target 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <a
      class="styles__u4r1ts4 styles__u4r1ts3"
      href="https://scaleway.com"
      target="_blank"
    >
      <div
        class="styles__u4r1tsf uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="styles_column__u4r1ts9 styles__u4r1ts8 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="styles_column__u4r1ts6 uv_toi52u0 uv_toi52u11 uv_toi52u2d uv_toi52u31 uv_toi52u61"
            style="--uv_4k0ekn3: 1;"
          >
            <div
              class="styles__u4r1ts5"
            >
              <svg
                class="styles__dkdfcq0 styles_disabled_false__dkdfcq1 styles_prominence_default__dkdfcq3 styles_sentiment_neutral__dkdfcq9 styles_size_small__dkdfcqg styles_undefined_compound_34__dkdfcq1i"
                viewBox="0 0 16 16"
              >
                <path
                  d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
                />
                <path
                  d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with image, title, description, subtitle and icon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__u4r1ts4"
      target="_blank"
    >
      <div
        class="styles__u4r1tsf uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <img
          alt=""
          class="styles_column__u4r1tsd styles__u4r1tsc"
          height="120"
          src="/src/components/ContentCard/assets/illustration.png"
        />
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="styles_noHref__u4r1tsa styles__u4r1ts8 uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            /src/components/ContentCard/assets/illustration.png
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <small
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9owa uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9owu uv_m4c9ow26 uv_m4c9ow3i"
                  >
                    sub title test
                  </small>
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    test
                  </h3>
                </div>
                <p
                  class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9owp uv_m4c9ow23 uv_m4c9ow3f"
                >
                  this is a description
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with onClick 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__u4r1ts4 styles__u4r1ts3"
      role="button"
      target="_blank"
    >
      <div
        class="styles__u4r1tsf uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="styles_noHref__u4r1tsa styles__u4r1ts8 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with required title 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__u4r1ts4"
      target="_blank"
    >
      <div
        class="styles__u4r1tsf uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="styles_noHref__u4r1tsa styles__u4r1ts8 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h3
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    test
                  </h3>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`contentCard > renders correctly with title with custom tag 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__u4r1ts4"
      target="_blank"
    >
      <div
        class="styles__u4r1tsf uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
      >
        <div
          class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
          style="--uv_4k0ekn3: 1;"
        >
          <div
            class="styles_noHref__u4r1tsa styles__u4r1ts8 uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u5v"
            style="--uv_4k0ekn3: 1 1 auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              style="--uv_4k0ekn3: 1 1 auto;"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                >
                  <h1
                    class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow23 uv_m4c9ow3f"
                  >
                    test
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
